fixed headshots being too large at very large viewport sizes

--- a/static/scss/site/_people.scss
+++ b/static/scss/site/_people.scss
@@ -66,6 +66,7 @@
 		margin: 0 auto 20px auto;	
 		display: block;
 		border-radius: 50%;
+		max-width: 300px;
 		-webkit-filter: saturate(85%);	
 
 		@media screen and (max-width: $sm) {
